# metadetect

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lsst-tests-ngmix-upstream.yml  lsst-tests.yml  shear_test.yml  tests-ngmix-upstream.yml  tests.yml
metadetect/: _version.py  defaults.py  detect.py
metadetect/lsst/: configs.py  defaults.py  measure.py  metacal_exposures.py  metadetect.py  model_subtractor.py  photometry.py  util.py  vis.py
metadetect/lsst/tests/: regression_driver_v0_13_0.py  test_lsst_configs.py  test_lsst_conventions.py  test_lsst_masking.py  test_lsst_metacal_exposures.py  test_lsst_metadetect.py  test_lsst_model_subtractor.py  test_lsst_photometry.py  test_lsst_skysub.py  test_regression_vs_0_13_0.py
metadetect/tests/: test_fitting.py  test_fitting_joint.py  test_metadetect.py
scripts/: compare_reconv.py
shear_meas_test/: test_shear_meas.py
ups/: metadetect.table
